--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "devDependencies": {
     "bs-platform": "^7.3.2",
     "moduleserve": "^0.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:tylerperkins/reason-react-play.git"
   }
 }
