--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reason-react-play",
   "version": "0.1.0",
   "scripts": {
-    "build": "bsb -make-world",
+    "build": "bsb -make-world && npx webpack",
     "start": "bsb -make-world -w -ws _ ",
     "clean": "bsb -clean-world",
     "server": "moduleserve ./ --port 8000",
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "bs-platform": "^7.3.2",
-    "moduleserve": "^0.9.0"
+    "moduleserve": "^0.9.0",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   },
   "repository": {
     "type": "git",
